--- a/enterprise-automation-ui/package.json
+++ b/enterprise-automation-ui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "axios": "^1.11.0",
     "jotai": "^2.13.0",
     "next": "^15.4.5",
     "react": "^19.1.1",
