--- a/enterprise-automation-ui/package.json
+++ b/enterprise-automation-ui/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "axios": "^1.11.0",
-    "jotai": "^2.13.0",
     "next": "^15.4.5",
+    "next-auth": "^4.24.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
